fix scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,6 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-}
-
-body {
     display: flex;
     flex-direction: column;
     align-items: center;
